Flusspferd Change Log
=====================

Release 0.9
-----------

2009-12-04:
- Add flusspferd::create_on API for creating multiple objects on the same
  container (#179).

2009-12-03:
- Improve constructor of native_function_base derived classes to have access
  to the function already in the constructor, not just afterwards, which should
  simplify the creation of custom native functions (#178).

2009-12-02:
- Add object::instance_of, which works like Javascript's "instanceof" (#128).
- Add object::constructor: it returns the object's constructor function (#172).
- Make object::constructor/prototype/parent work on const objects (#175).
- Add util/load module (#34).
- Allow loading modules from $FLUSSPFERD_USER_MODULES or
  $HOME/.flusspferd/modules (#116).
- Overload flusspferd::is_native & flusspferd::get_native for classes deriving
  from native_function_base (#131).
- create<NativeFunction> now passes name and arity to the constructor of
  NativeFunction by default (#176).
- exception now accepts a (completed) boost::format parmeter (part of #44)

2009-11-21:
- Add the new directives method and function (under the methods parameter), as
  well as the directives getter_expression and getter_setter_expression (under
  the properties parameter) for specifying methods and properties as function
  expressions (#167).

2009-11-14:
- Add object::set_properties and object::define_properties for setting or
  defining multiple properties at once (#151).

2009-11-13:
- Add extendLeft and extendRight methods to ByteArray (#160).

2009-10-30:
- object::get_property_attributes API changed.
- changed object to provide an id based API for properties (#155).
- Boost 1.40 required.

2009-10-26:
- Replace create_* with create<> (#147).

2009-10-25:
- Better toString and toSource for native objects (#139).
- Allow enabling the Tracemonkey JIT mode from C++ (#140).
- Add == for flusspferd::value (#141).
- Add push for flusspferd::array (#144).