@@ -4,6 +4,10 @@ Flusspferd Change Log
 Release 0.9
 -----------
 
+2009-12-06:
+- You can now throw an flusspferd::value (or a subclass) from C++ rather than
+  just specific Error types.
+
 2009-12-04:
 - Add flusspferd::create_on API for creating multiple objects on the same
   container (#179).
